--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ blinker==1.9.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.3.1
+colorama==0.4.6
 dotenv==0.9.9
 Flask==3.1.2
 flask-cors==6.0.2
@@ -16,8 +17,10 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 multidict==6.7.1
 propcache==0.4.1
+PyJWT==2.11.0
 python-dotenv==1.2.1
 requests==2.32.5
+typing_extensions==4.15.0
 urllib3==2.6.3
 Werkzeug==3.1.5
 yarl==1.22.0
